--- a/README
+++ b/README
@@ -3,7 +3,4 @@ Documentation for the C++ implementation is in doc/. The python version of
 gflags is now shipped seperately as it is completely independent of this
 module.
 
-See INSTALL for (generic) installation instructions for C++: basically
-   ./configure && make && make install
-
-See README_windows.txt for instructions on using under windows.
+See INSTALL for (generic) installation instructions for C++.
