--- a/README
+++ b/README
@@ -1,6 +1,5 @@
-This repository contains a C++ of the Google commandline flags module.
-Documentation for the C++ implementation is in doc/. The python version of
-gflags is now shipped seperately as it is completely independent of this
-module.
+This repository contains the C++ implementation of the commandline flags module
+originally developed at Google. Documentation for this module is in doc/.
+The python version of gflags is now a separate project.
 
-See INSTALL for (generic) installation instructions for C++.
+See INSTALL for (generic) installation instructions.
