--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,11 +1,11 @@
-* Wed Jan 25 15:09:14 2012  Google Inc. <google-gflags@googlegroups.com>
+* Wed Jan 25 2012  Google Inc. <google-gflags@googlegroups.com>
 
 	- gflags: version 2.0
 	- Changed the 'official' gflags email in setup.py/etc
 	- Renamed google-gflags.sln to gflags.sln
 	- Changed copyright text to reflect Google's relinquished ownership
 
-* Tue Dec 20 19:48:57 2011  Google Inc. <opensource@google.com>
+* Tue Dec 20 2011  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 1.7
 	- Add CommandLineFlagInfo::flag_ptr pointing to current storage (musji)
@@ -14,7 +14,7 @@
 	- Fix a bug in StringPrintf() that affected large strings (csilvers)
 	- Die at configure-time when g++ isn't installed
 
-* Fri Jul 29 19:05:21 2011  Google Inc. <opensource@google.com>
+* Fri Jul 29 2011  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 1.6
 	- BUGFIX: Fix a bug where we were leaving out a required $(top_srcdir)
@@ -26,7 +26,7 @@
 	- Change ReparseCommandLineFlags to return void (csilvers)
 	- Some doc typofixes and example augmentation (various)
 
-* Mon Jan 24 16:11:35 2011  Google Inc. <opensource@google.com>
+* Mon Jan 24 2011  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 1.5
 	- Better reporting of current vs default value (handler)
@@ -35,7 +35,7 @@
 	- Use our own string typedef in case string is redefined (csilvers)
 	- Updated to autoconf 2.65
 
-* Wed Oct 13 17:40:12 2010  Google Inc. <opensource@google.com>
+* Wed Oct 13 2010  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 1.4
 	- Add a check to prevent passing 0 to DEFINE_string (jorg)
@@ -46,7 +46,7 @@
 	- Update the NEWS file to be non-empty
 	- Add pkg-config (.pc) files for libgflags and libgflags_nothreads
 
-* Mon Jan  4 18:09:30 2010  Google Inc. <opensource@google.com>
+* Mon Jan  4 2010  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 1.3
 	- PORTABILITY: can now build and run tests under MSVC (csilvers)
@@ -57,7 +57,7 @@
 	- Makefile fix: $(srcdir) -> $(top_srcdir) in one place (csilvres)
 	- INSTALL: autotools to autoconf v2.64 + automake v1.11 (csilvers)
 
-* Thu Sep 10 12:53:04 2009  Google Inc. <opensource@google.com>
+* Thu Sep 10 2009  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 1.2
 	- PORTABILITY: can now build and run tests under mingw (csilvers)
@@ -66,7 +66,7 @@
 	- Protect against a hypothetical global d'tor mutex problem (csilvers)
 	- BUGFIX: can now define a flag after 'using namespace google' (hamaji)
 
-* Tue Apr 14 12:35:25 2009  Google Inc. <opensource@google.com>
+* Tue Apr 14 2009  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 1.1
 	- Add both foo and nofoo for boolean flags, with --undefok (andychu)
@@ -84,13 +84,13 @@
 	- PORTABILITY: #include more headers to satify new gcc's (csilvers)
 	- INSTALL: Updated to autoconf 2.61 and libtool 1.5.26 (csilvers)
 
-* Fri Oct  3 15:16:46 2008  Google Inc. <opensource@google.com>
+* Fri Oct  3 2008  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 1.0
 	- Add a missing newline to an error string (bcmills)
 	- (otherwise exactly the same as gflags 1.0rc2)
 
-* Thu Sep 18 12:58:05 2008  Google Inc. <opensource@google.com>
+* Thu Sep 18 2008  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 1.0rc2
 	- Report current flag values in --helpxml (hdn)
@@ -100,7 +100,7 @@
 	- BUG FIX: Fix --helpshort for source files not in a subdir (csilvers)
 	- BUG FIX: Fix python unittest for 64-bit builds (bcmills)
 	
-* Tue Aug 19 16:15:48 2008
+* Tue Aug 19 2008
 
 	- google-gflags: version 1.0rc1
 	- Move #include files from google/ to gflags/ (csilvers)
@@ -112,7 +112,7 @@
 	- PORTABILITY: fix code to compile under Visual Studio (ajenjo)
 	- PORTABILITY: fix code to compile under Solaris 10 with CC (csilvers)
 
-* Mon Jul 21 23:01:38 2008  Google Inc. <opensource@google.com>
+* Mon Jul 21 2008  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 0.9
 	- Add the ability to validate a command-line flag (csilvers)
@@ -126,7 +126,7 @@
 	- Better error messages when bool flags collide (colohan)
 	- Only evaluate DEFINE_foo macro args once (csilvers)
 
-* Wed Mar 26 15:20:18 2008  Google Inc. <opensource@google.com>
+* Wed Mar 26  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 0.8
 	- Export DescribeOneFlag() in the API
@@ -137,7 +137,7 @@
 	- Improve #include hygiene
 	- Improve testing
 	
-* Thu Oct 18 11:33:20 2007  Google Inc. <opensource@google.com>
+* Thu Oct 18 2007  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 0.7
 	- Deal even more correctly with libpthread not linked in (csilvers)
@@ -149,14 +149,14 @@
 	- Broaden --helpshort to match foo-main.cc and foo_main.cc (hendrie)
 	- Fix "no modules match" message for --helpshort, etc (hendrie)
 
-* Wed Aug 15 07:35:51 2007  Google Inc. <opensource@google.com>
+* Wed Aug 15 2007  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 0.6
 	- Deal correctly with case that libpthread is not linked in (csilvers)
 	- Update Makefile/tests so we pass "make distcheck" (csilvers)
 	- Document and test that last assignment to a flag wins (wan)
 
-* Tue Jun 12 15:23:42 2007  Google Inc. <opensource@google.com>
+* Tue Jun 12 2007  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 0.5
 	- Include all m4 macros in the distribution (csilvers)
@@ -164,14 +164,14 @@
 	- Python: better string serliaizing and unparsing (abo, csimmons)
 	- Fix checks for NaN and inf to work with Mac OS X (csilvers)
 	
-* Thu Apr 19 15:15:07 2007  Google Inc. <opensource@google.com>
+* Thu Apr 19 2007  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 0.4
 	- Remove is_default from GetCommandLineFlagInfo (csilvers)
 	- Portability fixes: includes, strtoll, gcc4.3 errors (csilvers)
 	- A few doc typo cleanups (csilvers)
 
-* Wed Mar 28 12:15:56 2007  Google Inc. <opensource@google.com>
+* Wed Mar 28 2007  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 0.3
 	- python portability fix: use popen instead of subprocess (csilvers)
@@ -179,13 +179,13 @@
 	- Make docs a bit prettier (csilvers)
 	- Actually include the python files in the distribution! :-/ (csilvers)
 
-* Mon Jan 22 15:33:06 2007  Google Inc. <opensource@google.com>
+* Mon Jan 22 2007  Google Inc. <opensource@google.com>
 
 	- google-gflags: version 0.2
 	- added support for python commandlineflags, as well as c++
 	- gflags2man, a script to turn flags into a man page (dchristian)
 
-* Wed Dec 13 12:37:19 2006  Google Inc. <opensource@google.com>
+* Wed Dec 13 2006  Google Inc. <opensource@google.com>
 
 	- google-gflags: initial release:
 	The gflags package contains a library that implements commandline
